--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,7 @@
 
 /*** Facts ***/
 .fact {
-    background: linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .7)), url(../img/carousel-bg-1.jpg);
+    background: linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .7)), url(../img/WhatsApp\ Image\ 2023-12-11\ at\ 6.20.28\ PM.jpeg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
