--- a/css/style.css
+++ b/css/style.css
@@ -216,10 +216,9 @@
     color: #FFFFFF !important;
 }
 
-
 /*** Booking ***/
 .booking {
-    background: linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .7)), url(../img/carousel-bg-2.jpg) center center no-repeat;
+    background: linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .7)), url(../img/2150871345.jpg) center center no-repeat;
     background-size: cover;
 }
 
